--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2024"
 [dependencies]
 bitmask-enum = "2.2.5"
 enum-iterator = "2.1.0"
+
+[lib]
+name = "rubiks"
+path = "src/rubiks/lib.rs"
+
+[[bin]]
+name = "rubiks-rs"
+path = "src/main.rs"
