--- a/rubiks-api/Cargo.toml
+++ b/rubiks-api/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = { version = "0.8.4", features = ["json"] }
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
+axum = { version = "0.8.4", features = ["json"] }
+tower-http = {version = "0.6.2", features = ["cors", "trace"]}
 rubiks = { path = "../rubiks" }
+rand = "0.9.2"
