--- a/rubiks-api/Cargo.toml
+++ b/rubiks-api/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2024"
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
 axum = { version = "0.8.4", features = ["json"] }
 tower-http = { version = "0.6.2", features = ["cors", "trace"] }
-sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"]}
+serde = { version = "1.0.219", features = ["derive"] }
+sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
 rubiks = { path = "../rubiks" }
 rand = "0.9.2"
-date = "0.1.3"
+chrono = "0.4.41"
+async-trait = "0.1.89"
 
 [[bin]]
 name = "migrate"
