--- a/rubiks-api/Cargo.toml
+++ b/rubiks-api/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
 axum = { version = "0.8.4", features = ["json"] }
 tower-http = { version = "0.6.2", features = ["cors", "trace"] }
-serde = { version = "1.0.219", features = ["derive"] }
+serde = { version = "1.0.219", features = ["derive", "std"] }
 sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
 rubiks = { path = "../rubiks" }
 rand = "0.9.2"
